# IBM

./: README.md  readme.md
1.Главный модуль/: ReadMe.md  readme.md
1.Главный модуль/1/server/: runModl.md
1.Главный модуль/1/server/discipline/: discipline.cpp  discipline.h
1.Главный модуль/1/server/reg/: main.cpp  (+1 more)
2.Модуль авторизации/: README.md  readme.md
2.Модуль авторизации/docer/: readme.md
2.Модуль авторизации/docer/cleint/: main.go
2.Модуль авторизации/docer/codeAund/: go.mod
2.Модуль авторизации/docer/loge/: go.work
2.Модуль авторизации/docer/test/: go.mod  go.sum  go.work.sum
3/: readme.md
3.Telegram клиент/: handlers.py  keyboards.py  main.py  readme.md  storage.py
3.Telegram клиент/app/: auth_handlers.py  callback_handlers.py  config.py  handlers.py  keyboards.py  storage.py
4.Web клиент/: auth.html  creating.html  index.html  index.js  login.html  package-lock.json  package.json  readme.md  reg.html  server.js  start.html
4.Web клиент/docer/: authPage.html  authstyle.css  package-lock.json  package.json  server3000.js  server3001.js
4.Web клиент/public/: creating.html  index.html  login.html  start.html
4.Web клиент/styles/: regstyle.css
docer/: dump.rdb  readme.md  runOuth.sh  runWeb.sh
docer/1/server/: CMakeLists.txt  main  main.cpp  req.cpp  req.h
docer/2/: readme.md
docer/2/client/: main.go
docer/2/test/: success.html
docer/4/: dump.rdb  re.md
docer/4/html/: authPage.html  codePage.html  discipline.html  profile.html
docer/4/server/: app.js  package-lock.json  package.json  server3000.js  server3001.js
(+26 files in other folders)
